[project]
name = "bayesmbar"
version = "0.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.6.0",
    "jaxlib>=0.6.0",
    "blackjax>=1.2.3",
    "networkx>=3.3",
    "tqdm>=4.66.5",
    "pytest>=8.3.2",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "sphinx>=8.0.2",
    "sphinx-copybutton>=0.5.2",
    "nbsphinx>=0.9.5",
    "sphinx-autoapi>=3.3.1",
    "sphinx-book-theme>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
