[project]
name = "bayesmbar"
version = "0.1.2"
description = "Bayesian Multistate Bennett Acceptance Ratio (BayesMBAR) methods for free energy calculations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]>=0.6.0",
    "jaxlib>=0.6.0",
    "blackjax>=1.2.3",
    "networkx>=3.3",
    "tqdm>=4.66.5",
    "pytest>=8.3.5",
    "optax>=0.2.4",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "sphinx>=8.0.2",
    "sphinx-copybutton>=0.5.2",
    "nbsphinx>=0.9.5",
    "sphinx-autoapi>=3.3.1",
    "sphinx-book-theme>=1.1.3",
    "matplotlib>=3.10.3",
]

[project.optional-dependencies]
testing = [
    "pytest>=8.3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
